testsuite/tests/properties/can_reach/invalid/not_a_property.lkt
import common

@abstract class FooNode implements Node[FooNode] {
    can_reach: Bool
}
